add input; icon buttons

--- a/neumorphism/index.html
+++ b/neumorphism/index.html
@@ -8,7 +8,23 @@
   <title>Neumorphism | Concepts</title>
 </head>
 <body>
-  <button class="neu">Button</button>
+  <main>
+    <div class="page-heading neu">
+      <h1>Neumorphism</h1>
+    </div>
+    <div class='content neu'>
+      <button class="neu clickable">Button</button>
+      <div class="switch">
+        <input id="switch-1" type="checkbox" class="switch-input">
+        <label for="switch-1" class="switch-label"></label>
+      </div>
+      <div class='space-between'>
+        <button class='neu clickable icon'><img src='../icons/heart.svg' /></button>
+        <button class='neu clickable icon'><img src='../icons/caution.svg' /></button>
+        <button class='neu clickable icon'><img src='../icons/star.svg' /></button>
+      </div>
+    </div>
+  </main>
   <!-- 
     TODO: get standard icons
 
@@ -21,6 +37,7 @@
       rounded corners
       toggle switch
       input box
+      check box
    -->
 </body>
 </html>
