add some grid options

--- a/neumorphism/index.html
+++ b/neumorphism/index.html
@@ -20,24 +20,23 @@
       </div>
       <div class='space-between'>
         <button class='neu clickable icon'><img src='../icons/heart.svg' /></button>
-        <button class='neu clickable icon'><img src='../icons/caution.svg' /></button>
+        <button class='neu clickable icon'><img src='../icons/edit.svg' /></button>
         <button class='neu clickable icon'><img src='../icons/star.svg' /></button>
+      </div>
+      <div class='space-between'>
+        <button class='neu clickable icon square'><img src='../icons/warning.svg' /></button>
+        <button class='neu clickable icon square'><img src='../icons/caution.svg' /></button>
+        <button class='neu clickable icon square'><img src='../icons/help.svg' /></button>
+      </div>
+      <div class='two-col'>
+        <input type=text class='neu neu-inset' placeholder="placeholder" />
       </div>
     </div>
   </main>
   <!-- 
-    TODO: get standard icons
-
-    buttons
-      icon
-        circle
-        square
-        circle w border
-        square w border
-      rounded corners
-      toggle switch
-      input box
-      check box
+    TODO:
+    radio buttons
+    select
    -->
 </body>
 </html>
