--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <ul>
     <li><a href="./neumorphism/index.html">Neumorphism</a></li>
+    <li><a href="./loaders/index.html">Loaders</a></li>
   </ul>
 </body>
 </html>
