semi-working draft

--- a/sustainability-tenets/index.html
+++ b/sustainability-tenets/index.html
@@ -11,27 +11,35 @@
 <!-- Mockup: https://dribbble.com/shots/16388910-Sustainability-Tenets -->
 
 <body>
-  <!-- 
-    about 
-    reduce
-    rethink
-    repair
-    recycle
-    reuse
-    refuse
-  -->
-  <!-- 
-    Section title
-    image
-    text
-   -->
    <section class="about">
      <label>About</label>
      <h1>The 6 r's of sustainability - zero waste tenets</h1>
    </section>
-   <section class="reduce centered-bg-img closed">
+   <section class="reduce centered-bg-img">
      <label>Reduce</label>
      <p>Fusce vel velit nibh. Nam magna ligula, mattis id magna at, porta accumsan lorem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eu ullamcorper.</p>
    </section>
+   <section class="rethink centered-bg-img">
+     <label>rethink</label>
+     <p>Fusce vel velit nibh. Nam magna ligula, mattis id magna at, porta accumsan lorem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eu ullamcorper.</p>
+   </section>
+   <section class="repair centered-bg-img">
+     <label>repair</label>
+     <p>Fusce vel velit nibh. Nam magna ligula, mattis id magna at, porta accumsan lorem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eu ullamcorper.</p>
+   </section>
+   <section class="recycle centered-bg-img">
+     <label>recycle</label>
+     <p>Fusce vel velit nibh. Nam magna ligula, mattis id magna at, porta accumsan lorem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eu ullamcorper.</p>
+   </section>
+   <section class="reuse centered-bg-img">
+     <label>reuse</label>
+     <p>Fusce vel velit nibh. Nam magna ligula, mattis id magna at, porta accumsan lorem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eu ullamcorper.</p>
+   </section>
+   <section class="refuse centered-bg-img">
+     <label>refuse</label>
+     <p>Fusce vel velit nibh. Nam magna ligula, mattis id magna at, porta accumsan lorem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eu ullamcorper.</p>
+   </section>
+   
+  <script src="./index.js"></script>
 </body>
 </html>
