fixed the transitions, kind of

--- a/sustainability-tenets/index.html
+++ b/sustainability-tenets/index.html
@@ -11,7 +11,7 @@
 <!-- Mockup: https://dribbble.com/shots/16388910-Sustainability-Tenets -->
 
 <body>
-   <section class="about">
+   <section class="about open">
      <label>About</label>
      <h1>The 6 r's of sustainability - zero waste tenets</h1>
    </section>
