fix directory; add to site map

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   <ul>
     <li><a href="./neumorphism/index.html">Neumorphism</a></li>
     <li><a href="./loaders/index.html">Loaders</a></li>
+    <li>
+      <label>Dribbble</label>
+      <ul>
+        <li><a href="./dribbble/sustainability-tenets/index.html">Sustainability Tenets</a></li>
+      </ul>
+    </li>
   </ul>
 </body>
 </html>
