update styles, connect to backend

--- a/steam-sales/index.html
+++ b/steam-sales/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <h1>Steam Sales</h1>
-  <ul id='game-cards'></ul>
+  <ul id='game-cards'>...getting data...</ul>
 
   <script src='./index.js'></script>
 </body>
