--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <ul>
     <li><a href="./neumorphism/index.html">Neumorphism</a></li>
     <li><a href="./loaders/index.html">Loaders</a></li>
+    <li><a href="./steam-sales/index.html">Steam Sales</a></li>
     <li>
       <label>Dribbble</label>
       <ul>
