--- a/steam-sales/index.html
+++ b/steam-sales/index.html
@@ -9,9 +9,21 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./index.css">
+  <link rel="stylesheet" href="./loader.css">
 </head>
 <body>
   <h1>Steam Sales</h1>
+  <ul class='loader'>
+    <li id='a'></li>
+    <li id='b'></li>
+    <li id='c'></li>
+    <li id='d'></li>
+    <li id='e'></li>
+    <li id='f'></li>
+    <li id='g'></li>
+    <li id='h'></li>
+    <li id='i'></li>
+  </ul>
   <ul id='game-cards'></ul>
 
   <script src='./index.js'></script>
