add infinite scrolling

--- a/steam-sales/index.html
+++ b/steam-sales/index.html
@@ -25,6 +25,7 @@
     <li id='i'></li>
   </ul>
   <ul id='game-cards'></ul>
+  <span id='time-to-load-more-cards'></span>
 
   <script src='./index.js'></script>
 </body>
