got the range working

--- a/PR-estimate/index.html
+++ b/PR-estimate/index.html
@@ -9,6 +9,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./index.css">
+  <link rel="stylesheet" href="./range.css">
+  <script src="./index.js" defer></script>
 </head>
 <body>
   <h1 class="heading">How long will it take to review your PR?</h1>
@@ -28,5 +30,6 @@
       <img src='./right-arrow.svg' />
     </button>
   </form>
+
 </body>
 </html>
