--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <li><a href="./neumorphism/index.html">Neumorphism</a></li>
     <li><a href="./loaders/index.html">Loaders</a></li>
     <li><a href="./steam-sales/index.html">Steam Sales</a></li>
-    <li><a href="./pr-estimate/index.html">PR Time Estimate</a></li>
+    <li><a href="./PR-estimate/index.html">PR Time Estimate</a></li>
     <li>
       <label>Dribbble</label>
       <ul>
