--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <li><a href="./loaders/index.html">Loaders</a></li>
     <li><a href="./steam-sales/index.html">Steam Sales</a></li>
     <li><a href="./PR-estimate/index.html">PR Time Estimate</a></li>
+    <li><a href="./clock-stopwatch/stopwatch.html">Stopwatch</a></li>
     <li>
       <label>Dribbble</label>
       <ul>
